traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return estDosMur()&&murADroite()
  ^TraversalDiagonal:18: error: '(' expected but identifier found.
  if !fini() {
     ^TraversalDiagonal:30: error: illegal start of simple expression
}
^