traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
def murADroite():Boolean = {
  
  var resultat = false
  droite()
  resultat = estFaceMur()
  gauche()
  return resultat
  
}

def fini():Boolean {
  
  return estDosMur()&&murADroite()
  
}

def next() {
  
  if !fini() {
    
    var numDiag = getX()+getY() //le numéro de la diagonale
    getY() match {
      
      case 0 => setPos(debutDiag(numDiag))//on commence la prochaine diagonale
      case _ => setPos(getX()+1,getY()-1) //on est pas au bout : on avance en diago
      
    }
    
  }
  
}

def debutDiag(num:Int):Tuple2[Int,Int] = {
  
  if (num<7) {
    
    return (0,num)
    
  } else {
    
    return (num-6,6)
    
  }
  
}
var compteur = 0
override def run() {
  
  ecritMessage(compteur)
  next()
  compteur = compteur + 1
  
}